--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -31,14 +31,22 @@
             android:paddingEnd="@dimen/small_margin"
             android:paddingBottom="@dimen/activity_margin" />
 
-        <com.simplemobiletools.commons.views.MyEditText
-            android:id="@+id/save_image_filename"
+        <com.simplemobiletools.commons.views.MyTextInputLayout
+            android:id="@+id/save_image_filename_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin"
-            android:singleLine="true"
-            android:textCursorDrawable="@null"
-            android:textSize="@dimen/normal_text_size" />
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginBottom="@dimen/medium_margin"
+            android:hint="@string/filename">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/save_image_filename"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textSize="@dimen/bigger_text_size" />
+
+        </com.simplemobiletools.commons.views.MyTextInputLayout>
 
         <RadioGroup
             android:id="@+id/save_image_radio_group"
