Add color filler tool
 - Simplified the undo/redo code using `Operation` abstraction

 - Color fill changes is not saved with SVGs. More research/development is needed on this.

 - Bitmap operations are not saved during `onSaveInstanceState` because of the obvious memory/space issue. Perhaps using `Path` objects in the flood-fill algorithm can remedy this and the above issue

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,10 +44,18 @@
                 android:id="@+id/redo"
                 android:layout_width="@dimen/normal_icon_size"
                 android:layout_height="@dimen/normal_icon_size"
-                android:layout_toStartOf="@+id/eraser"
+                android:layout_toStartOf="@+id/color_fill"
                 android:padding="@dimen/medium_margin"
                 android:src="@drawable/ic_redo_vector"
                 android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/color_fill"
+                android:layout_width="@dimen/normal_icon_size"
+                android:layout_height="@dimen/normal_icon_size"
+                android:layout_toStartOf="@+id/eraser"
+                android:padding="@dimen/medium_margin"
+                android:src="@drawable/ic_color_fill_on_vector" />
 
             <ImageView
                 android:id="@+id/eraser"
