--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,20 +44,20 @@
                 android:id="@+id/redo"
                 android:layout_width="@dimen/normal_icon_size"
                 android:layout_height="@dimen/normal_icon_size"
-                android:layout_toStartOf="@+id/color_fill"
+                android:layout_toStartOf="@+id/bucket_fill"
                 android:contentDescription="@string/redo"
                 android:padding="@dimen/medium_margin"
                 android:src="@drawable/ic_redo_vector"
                 android:visibility="gone" />
 
             <ImageView
-                android:id="@+id/color_fill"
+                android:id="@+id/bucket_fill"
                 android:layout_width="@dimen/normal_icon_size"
                 android:layout_height="@dimen/normal_icon_size"
                 android:layout_toStartOf="@+id/eraser"
                 android:contentDescription="@string/bucket_fill"
                 android:padding="@dimen/medium_margin"
-                android:src="@drawable/ic_color_fill_on_vector" />
+                android:src="@drawable/ic_bucket_fill_on_vector" />
 
             <ImageView
                 android:id="@+id/eraser"
