Show ripples on undo/redo click

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
                 android:layout_width="@dimen/normal_icon_size"
                 android:layout_height="@dimen/normal_icon_size"
                 android:layout_toStartOf="@+id/bucket_fill"
+                android:background="?actionBarItemBackground"
                 android:contentDescription="@string/redo"
                 android:padding="@dimen/medium_margin"
                 android:src="@drawable/ic_redo_vector"
@@ -91,6 +92,7 @@
                 android:layout_height="@dimen/normal_icon_size"
                 android:layout_below="@id/color_picker"
                 android:layout_alignParentEnd="true"
+                android:background="?actionBarItemBackground"
                 android:contentDescription="@string/undo"
                 android:padding="@dimen/medium_margin"
                 android:src="@drawable/ic_undo_vector"
