use the nicer Path picker at Save as dialog

--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -14,28 +14,25 @@
         android:paddingTop="@dimen/activity_margin"
         android:paddingRight="@dimen/activity_margin">
 
-        <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/save_image_path_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/small_margin"
-            android:text="@string/path"
-            android:textSize="@dimen/smaller_text_size" />
-
-        <com.simplemobiletools.commons.views.MyTextView
-            android:id="@+id/save_image_path"
+        <com.simplemobiletools.commons.views.MyTextInputLayout
+            android:id="@+id/folder_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/small_margin"
-            android:paddingTop="@dimen/small_margin"
-            android:paddingEnd="@dimen/small_margin"
-            android:paddingBottom="@dimen/activity_margin" />
+            android:layout_marginBottom="@dimen/activity_margin"
+            android:hint="@string/path">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/folder_value"
+                style="@style/UnclickableEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.simplemobiletools.commons.views.MyTextInputLayout>
 
         <com.simplemobiletools.commons.views.MyTextInputLayout
             android:id="@+id/save_image_filename_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/activity_margin"
             android:layout_marginBottom="@dimen/medium_margin"
             android:hint="@string/filename">
 
